plugins/parsers/influx/machine.go

//line plugins/parsers/influx/machine.go.rl:1
package influx

import (
	"errors"
)

var (
	ErrNameParse = errors.New("expected measurement name")
	ErrFieldParse = errors.New("expected field")
	ErrTagFieldParse = errors.New("expected tagset or fieldset")
	ErrTagParse = errors.New("expected tag")
	ErrTimestampParse = errors.New("expected timestamp")
	ErrParse = errors.New("parse error")
	EOF = errors.New("EOF")
)


//line plugins/parsers/influx/machine.go.rl:283



//line plugins/parsers/influx/machine.go:25
const LineProtocol_start int = 211
const LineProtocol_first_final int = 211
const LineProtocol_error int = 0

const LineProtocol_en_main int = 211
const LineProtocol_en_discard_line int = 200
const LineProtocol_en_align int = 608
const LineProtocol_en_series int = 203


//line plugins/parsers/influx/machine.go.rl:286

type Handler interface {
	SetMeasurement(name []byte)
	AddTag(key []byte, value []byte)
	AddInt(key []byte, value []byte)
	AddUint(key []byte, value []byte)
	AddFloat(key []byte, value []byte)
	AddString(key []byte, value []byte)
	AddBool(key []byte, value []byte)
	SetTimestamp(tm []byte)
}

type machine struct {
	data       []byte
	cs         int
	p, pe, eof int
	pb         int
	lineno     int
	sol        int
	handler    Handler
	initState  int
}

func NewMachine(handler Handler) *machine {
	m := &machine{
		handler: handler,
		initState: LineProtocol_en_align,
	}

	
//line plugins/parsers/influx/machine.go.rl:316
	
//line plugins/parsers/influx/machine.go.rl:317
	
//line plugins/parsers/influx/machine.go.rl:318
	
//line plugins/parsers/influx/machine.go.rl:319
	
//line plugins/parsers/influx/machine.go.rl:320
	
//line plugins/parsers/influx/machine.go.rl:321
	
//line plugins/parsers/influx/machine.go:79
	{
	( m.cs) = LineProtocol_start
	}

//line plugins/parsers/influx/machine.go.rl:322

	return m
}

func NewSeriesMachine(handler Handler) *machine {
	m := &machine{
		handler: handler,
		initState: LineProtocol_en_series,
	}

	
//line plugins/parsers/influx/machine.go.rl:333
	
//line plugins/parsers/influx/machine.go.rl:334
	
//line plugins/parsers/influx/machine.go.rl:335
	
//line plugins/parsers/influx/machine.go.rl:336
	
//line plugins/parsers/influx/machine.go.rl:337
	
//line plugins/parsers/influx/machine.go:106
	{
	( m.cs) = LineProtocol_start
	}

//line plugins/parsers/influx/machine.go.rl:338

	return m
}

func (m *machine) SetData(data []byte) {
	m.data = data
	m.p = 0
	m.pb = 0
	m.lineno = 1
	m.sol = 0
	m.pe = len(data)
	m.eof = len(data)

	
//line plugins/parsers/influx/machine.go:126
	{
	( m.cs) = LineProtocol_start
	}

//line plugins/parsers/influx/machine.go.rl:352
	m.cs = m.initState
}

// Next parses the next metric line and returns nil if it was successfully
// processed.  If the line contains a syntax error an error is returned,
// otherwise if the end of file is reached before finding a metric line then
// EOF is returned.
func (m *machine) Next() error {
	if m.p == m.pe && m.pe == m.eof {
		return EOF
	}

	var err error
	var key []byte
	foundMetric := false

	
//line plugins/parsers/influx/machine.go:149
	{
	if ( m.p) == ( m.pe) {
		goto _test_eof
	}
	goto _resume

_again:
	switch ( m.cs) {
	case 211:
		goto st211
	case 1:
		goto st1
	case 2:
		goto st2
	case 3:
		goto st3
	case 0:
		goto st0
	case 4:
		goto st4
	case 5:
		goto st5
	case 6:
		goto st6
	case 212:
		goto st212
	case 213:
		goto st213
	case 214:
		goto st214
	case 7:
		goto st7
	case 8:
		goto st8
	case 9:
		goto st9
	case 10:
		goto st10
	case 11:
		goto st11
	case 12:
		goto st12
	case 13:
		goto st13
	case 14:
		goto st14
	case 15:
		goto st15
	case 16:
		goto st16
	case 17:
		goto st17
	case 18:
		goto st18
	case 19:
		goto st19
	case 20:
		goto st20
	case 21:
		goto st21
	case 22:
		goto st22
	case 23:
		goto st23
	case 24:
		goto st24
	case 25:
		goto st25
	case 26:
		goto st26
	case 27:
		goto st27
	case 28:
		goto st28
	case 215:
		goto st215
	case 216:
		goto st216
	case 29:
		goto st29
	case 30:
		goto st30
	case 217:
		goto st217
	case 218:
		goto st218
	case 219:
		goto st219
	case 31:
		goto st31
	case 220:
		goto st220
	case 221:
		goto st221
	case 222:
		goto st222
	case 223:
		goto st223
	case 224:
		goto st224
	case 225:
		goto st225
	case 226:
		goto st226
	case 227:
		goto st227
	case 228:
		goto st228
	case 229:
		goto st229
	case 230:
		goto st230
	case 231:
		goto st231
	case 232:
		goto st232
	case 233:
		goto st233
	case 234:
		goto st234
	case 235:
		goto st235
	case 236:
		goto st236
	case 237:
		goto st237
	case 32:
		goto st32
	case 33:
		goto st33
	case 238:
		goto st238
	case 239:
		goto st239
	case 34:
		goto st34
	case 240:
		goto st240
	case 241:
		goto st241
	case 35:
		goto st35
	case 242:
		goto st242
	case 243:
		goto st243
	case 244:
		goto st244
	case 245:
		goto st245
	case 246:
		goto st246
	case 247:
		goto st247
	case 248:
		goto st248
	case 249:
		goto st249
	case 250:
		goto st250
	case 251:
		goto st251
	case 252:
		goto st252
	case 253:
		goto st253
	case 254:
		goto st254
	case 255:
		goto st255
	case 256:
		goto st256
	case 257:
		goto st257
	case 258:
		goto st258
	case 259:
		goto st259
	case 36:
		goto st36
	case 37:
		goto st37
	case 38:
		goto st38
	case 260:
		goto st260
	case 39:
		goto st39
	case 40:
		goto st40
	case 41:
		goto st41
	case 42:
		goto st42
	case 43:
		goto st43
	case 261:
		goto st261
	case 44:
		goto st44
	case 262:
		goto st262
	case 263:
		goto st263
	case 45:
		goto st45
	case 264:
		goto st264
	case 265:
		goto st265
	case 266:
		goto st266
	case 267:
		goto st267
	case 268:
		goto st268
	case 269:
		goto st269
	case 270:
		goto st270
	case 271:
		goto st271
	case 272:
		goto st272
	case 46:
		goto st46
	case 47:
		goto st47
	case 48:
		goto st48
	case 273:
		goto st273
	case 49:
		goto st49
	case 50:
		goto st50
	case 51:
		goto st51
	case 274:
		goto st274
	case 52:
		goto st52
	case 53:
		goto st53
	case 275:
		goto st275
	case 276:
		goto st276
	case 54:
		goto st54
	case 55:
		goto st55
	case 56:
		goto st56
	case 277:
		goto st277
	case 57:
		goto st57
	case 58:
		goto st58
	case 278:
		goto st278
	case 279:
		goto st279
	case 280:
		goto st280
	case 281:
		goto st281
	case 282:
		goto st282
	case 283:
		goto st283
	case 284:
		goto st284
	case 285:
		goto st285
	case 286:
		goto st286
	case 59:
		goto st59
	case 60:
		goto st60
	case 61:
		goto st61
	case 287:
		goto st287
	case 62:
		goto st62
	case 63:
		goto st63
	case 64:
		goto st64
	case 288:
		goto st288
	case 65:
		goto st65
	case 66:
		goto st66
	case 289:
		goto st289
	case 290:
		goto st290
	case 67:
		goto st67
	case 68:
		goto st68
	case 69:
		goto st69
	case 70:
		goto st70
	case 71:
		goto st71
	case 72:
		goto st72
	case 291:
		goto st291
	case 292:
		goto st292
	case 293:
		goto st293
	case 294:
		goto st294
	case 73:
		goto st73
	case 295:
		goto st295
	case 296:
		goto st296
	case 297:
		goto st297
	case 298:
		goto st298
	case 299:
		goto st299
	case 300:
		goto st300
	case 301:
		goto st301
	case 302:
		goto st302
	case 303:
		goto st303
	case 304:
		goto st304
	case 305:
		goto st305
	case 306:
		goto st306
	case 307:
		goto st307
	case 308:
		goto st308
	case 309:
		goto st309
	case 310:
		goto st310
	case 311:
		goto st311
	case 312:
		goto st312
	case 313:
		goto st313
	case 314:
		goto st314
	case 315:
		goto st315
	case 316:
		goto st316
	case 74:
		goto st74
	case 75:
		goto st75
	case 76:
		goto st76
	case 77:
		goto st77
	case 78:
		goto st78
	case 79:
		goto st79
	case 80:
		goto st80
	case 81:
		goto st81
	case 82:
		goto st82
	case 83:
		goto st83
	case 84:
		goto st84
	case 85:
		goto st85
	case 86:
		goto st86
	case 317:
		goto st317
	case 318:
		goto st318
	case 87:
		goto st87
	case 319:
		goto st319
	case 320:
		goto st320
	case 321:
		goto st321
	case 322:
		goto st322
	case 323:
		goto st323
	case 324:
		goto st324
	case 325:
		goto st325
	case 326:
		goto st326
	case 327:
		goto st327
	case 328:
		goto st328
	case 329:
		goto st329
	case 330:
		goto st330
	case 331:
		goto st331
	case 332:
		goto st332
	case 333:
		goto st333
	case 334:
		goto st334
	case 335:
		goto st335
	case 336:
		goto st336
	case 337:
		goto st337
	case 338:
		goto st338
	case 88:
		goto st88
	case 89:
		goto st89
	case 339:
		goto st339
	case 340:
		goto st340
	case 90:
		goto st90
	case 341:
		goto st341
	case 342:
		goto st342
	case 343:
		goto st343
	case 344:
		goto st344
	case 345:
		goto st345
	case 346:
		goto st346
	case 347:
		goto st347
	case 348:
		goto st348
	case 349:
		goto st349
	case 350:
		goto st350
	case 351:
		goto st351
	case 352:
		goto st352
	case 353:
		goto st353
	case 354:
		goto st354
	case 355:
		goto st355
	case 356:
		goto st356
	case 357:
		goto st357
	case 358:
		goto st358
	case 359:
		goto st359
	case 360:
		goto st360
	case 91:
		goto st91
	case 361:
		goto st361
	case 362:
		goto st362
	case 92:
		goto st92
	case 93:
		goto st93
	case 94:
		goto st94
	case 95:
		goto st95
	case 96:
		goto st96
	case 363:
		goto st363
	case 97:
		goto st97
	case 98:
		goto st98
	case 364:
		goto st364
	case 365:
		goto st365
	case 366:
		goto st366
	case 367:
		goto st367
	case 368:
		goto st368
	case 369:
		goto st369
	case 370:
		goto st370
	case 371:
		goto st371
	case 372:
		goto st372
	case 99:
		goto st99
	case 100:
		goto st100
	case 101:
		goto st101
	case 373:
		goto st373
	case 102:
		goto st102
	case 103:
		goto st103
	case 104:
		goto st104
	case 374:
		goto st374
	case 105:
		goto st105
	case 106:
		goto st106
	case 375:
		goto st375
	case 376:
		goto st376
	case 107:
		goto st107
	case 108:
		goto st108
	case 109:
		goto st109
	case 110:
		goto st110
	case 111:
		goto st111
	case 112:
		goto st112
	case 113:
		goto st113
	case 114:
		goto st114
	case 115:
		goto st115
	case 116:
		goto st116
	case 117:
		goto st117
	case 118:
		goto st118
	case 377:
		goto st377
	case 378:
		goto st378
	case 379:
		goto st379
	case 119:
		goto st119
	case 380:
		goto st380
	case 381:
		goto st381
	case 382:
		goto st382
	case 383:
		goto st383
	case 384:
		goto st384
	case 385:
		goto st385
	case 386:
		goto st386
	case 387:
		goto st387
	case 388:
		goto st388
	case 389:
		goto st389
	case 390:
		goto st390
	case 391:
		goto st391
	case 392:
		goto st392
	case 393:
		goto st393
	case 394:
		goto st394
	case 395:
		goto st395
	case 396:
		goto st396
	case 397:
		goto st397
	case 398:
		goto st398
	case 399:
		goto st399
	case 400:
		goto st400
	case 401:
		goto st401
	case 120:
		goto st120
	case 402:
		goto st402
	case 403:
		goto st403
	case 404:
		goto st404
	case 405:
		goto st405
	case 121:
		goto st121
	case 406:
		goto st406
	case 407:
		goto st407
	case 408:
		goto st408
	case 409:
		goto st409
	case 410:
		goto st410
	case 411:
		goto st411
	case 412:
		goto st412
	case 413:
		goto st413
	case 414:
		goto st414
	case 415:
		goto st415
	case 416:
		goto st416
	case 417:
		goto st417
	case 418:
		goto st418
	case 419:
		goto st419
	case 420:
		goto st420
	case 421:
		goto st421
	case 422:
		goto st422
	case 423:
		goto st423
	case 424:
		goto st424
	case 425:
		goto st425
	case 122:
		goto st122
	case 123:
		goto st123
	case 124:
		goto st124
	case 426:
		goto st426
	case 427:
		goto st427
	case 125:
		goto st125
	case 428:
		goto st428
	case 429:
		goto st429
	case 430:
		goto st430
	case 431:
		goto st431
	case 432:
		goto st432
	case 433:
		goto st433
	case 434:
		goto st434
	case 435:
		goto st435
	case 436:
		goto st436
	case 437:
		goto st437
	case 438:
		goto st438
	case 439:
		goto st439
	case 440:
		goto st440
	case 441:
		goto st441
	case 442:
		goto st442
	case 443:
		goto st443
	case 444:
		goto st444
	case 445:
		goto st445
	case 446:
		goto st446
	case 447:
		goto st447
	case 126:
		goto st126
	case 448:
		goto st448
	case 449:
		goto st449
	case 450:
		goto st450
	case 127:
		goto st127
	case 451:
		goto st451
	case 452:
		goto st452
	case 453:
		goto st453
	case 454:
		goto st454
	case 455:
		goto st455
	case 456:
		goto st456
	case 457:
		goto st457
	case 458:
		goto st458
	case 459:
		goto st459
	case 460:
		goto st460
	case 461:
		goto st461
	case 462:
		goto st462
	case 463:
		goto st463
	case 464:
		goto st464
	case 465:
		goto st465
	case 466:
		goto st466
	case 467:
		goto st467
	case 468:
		goto st468
	case 469:
		goto st469
	case 470:
		goto st470
	case 471:
		goto st471
	case 472:
		goto st472
	case 128:
		goto st128
	case 473:
		goto st473
	case 474:
		goto st474
	case 475:
		goto st475
	case 476:
		goto st476
	case 477:
		goto st477
	case 478:
		goto st478
	case 479:
		goto st479
	case 480:
		goto st480
	case 481:
		goto st481
	case 482:
		goto st482
	case 483:
		goto st483
	case 484:
		goto st484
	case 485:
		goto st485
	case 486:
		goto st486
	case 487:
		goto st487
	case 488:
		goto st488
	case 489:
		goto st489
	case 490:
		goto st490
	case 491:
		goto st491
	case 492:
		goto st492
	case 493:
		goto st493
	case 494:
		goto st494
	case 129:
		goto st129
	case 130:
		goto st130
	case 131:
		goto st131
	case 132:
		goto st132
	case 133:
		goto st133
	case 495:
		goto st495
	case 134:
		goto st134
	case 496:
		goto st496
	case 135:
		goto st135
	case 497:
		goto st497
	case 498:
		goto st498
	case 499:
		goto st499
	case 500:
		goto st500
	case 501:
		goto st501
	case 502:
		goto st502
	case 503:
		goto st503
	case 504:
		goto st504
	case 505:
		goto st505
	case 136:
		goto st136
	case 137:
		goto st137
	case 138:
		goto st138
	case 506:
		goto st506
	case 139:
		goto st139
	case 140:
		goto st140
	case 141:
		goto st141
	case 507:
		goto st507
	case 142:
		goto st142
	case 143:
		goto st143
	case 508:
		goto st508
	case 509:
		goto st509
	case 144:
		goto st144
	case 145:
		goto st145
	case 146:
		goto st146
	case 510:
		goto st510
	case 511:
		goto st511
	case 512:
		goto st512
	case 147:
		goto st147
	case 513:
		goto st513
	case 514:
		goto st514
	case 515:
		goto st515
	case 516:
		goto st516
	case 517:
		goto st517
	case 518:
		goto st518
	case 519:
		goto st519
	case 520:
		goto st520
	case 521:
		goto st521
	case 522:
		goto st522
	case 523:
		goto st523
	case 524:
		goto st524
	case 525:
		goto st525
	case 526:
		goto st526
	case 527:
		goto st527
	case 528:
		goto st528
	case 529:
		goto st529
	case 530:
		goto st530
	case 531:
		goto st531
	case 532:
		goto st532
	case 148:
		goto st148
	case 149:
		goto st149
	case 533:
		goto st533
	case 534:
		goto st534
	case 535:
		goto st535
	case 536:
		goto st536
	case 537:
		goto st537
	case 538:
		goto st538
	case 539:
		goto st539
	case 540:
		goto st540
	case 541:
		goto st541
	case 150:
		goto st150
	case 151:
		goto st151
	case 152:
		goto st152
	case 542:
		goto st542
	case 153:
		goto st153
	case 154:
		goto st154
	case 155:
		goto st155
	case 543:
		goto st543
	case 156:
		goto st156
	case 157:
		goto st157
	case 544:
		goto st544
	case 545:
		goto st545
	case 158:
		goto st158
	case 159:
		goto st159
	case 160:
		goto st160
	case 161:
		goto st161
	case 546:
		goto st546
	case 162:
		goto st162
	case 547:
		goto st547
	case 548:
		goto st548
	case 163:
		goto st163
	case 549:
		goto st549
	case 550:
		goto st550
	case 551:
		goto st551
	case 552:
		goto st552
	case 553:
		goto st553
	case 554:
		goto st554
	case 555:
		goto st555
	case 556:
		goto st556
	case 557:
		goto st557
	case 164:
		goto st164
	case 165:
		goto st165
	case 166:
		goto st166
	case 558:
		goto st558
	case 167:
		goto st167
	case 168:
		goto st168
	case 169:
		goto st169
	case 559:
		goto st559
	case 170:
		goto st170
	case 171:
		goto st171
	case 560:
		goto st560
	case 561:
		goto st561
	case 172:
		goto st172
	case 173:
		goto st173
	case 562:
		goto st562
	case 174:
		goto st174
	case 175:
		goto st175
	case 563:
		goto st563
	case 564:
		goto st564
	case 565:
		goto st565
	case 566:
		goto st566
	case 567:
		goto st567
	case 568:
		goto st568
	case 569:
		goto st569
	case 570:
		goto st570
	case 176:
		goto st176
	case 177:
		goto st177
	case 178:
		goto st178
	case 571:
		goto st571
	case 179:
		goto st179
	case 180:
		goto st180
	case 181:
		goto st181
	case 572:
		goto st572
	case 182:
		goto st182
	case 183:
		goto st183
	case 573:
		goto st573
	case 574:
		goto st574
	case 184:
		goto st184
	case 185:
		goto st185
	case 186:
		goto st186
	case 575:
		goto st575
	case 576:
		goto st576
	case 577:
		goto st577
	case 578:
		goto st578
	case 579:
		goto st579
	case 580:
		goto st580
	case 581:
		goto st581
	case 582:
		goto st582
	case 583:
		goto st583
	case 584:
		goto st584
	case 585:
		goto st585
	case 586:
		goto st586
	case 587:
		goto st587
	case 588:
		goto st588
	case 589:
		goto st589
	case 590:
		goto st590
	case 591:
		goto st591
	case 592:
		goto st592
	case 593:
		goto st593
	case 187:
		goto st187
	case 188:
		goto st188
	case 594:
		goto st594
	case 189:
		goto st189
	case 190:
		goto st190
	case 595:
		goto st595
	case 596:
		goto st596
	case 597:
		goto st597
	case 598:
		goto st598
	case 599:
		goto st599
	case 600:
		goto st600
	case 601:
		goto st601
	case 602:
		goto st602
	case 191:
		goto st191
	case 192:
		goto st192
	case 193:
		goto st193
	case 603:
		goto st603
	case 194:
		goto st194
	case 195:
		goto st195
	case 196:
		goto st196
	case 604:
		goto st604
	case 197:
		goto st197
	case 198:
		goto st198
	case 605:
		goto st605
	case 606:
		goto st606
	case 199:
		goto st199
	case 200:
		goto st200
	case 607:
		goto st607
	case 203:
		goto st203
	case 610:
		goto st610
	case 611:
		goto st611
	case 204:
		goto st204
	case 205:
		goto st205
	case 206:
		goto st206
	case 207:
		goto st207
	case 612:
		goto st612
	case 208:
		goto st208
	case 209:
		goto st209
	case 210:
		goto st210
	case 608:
		goto st608
	case 609:
		goto st609
	case 201:
		goto st201
	case 202:
		goto st202
	}
